Download save + drag and drop save .txt

--- a/index.html
+++ b/index.html
@@ -95,37 +95,37 @@
                         <div>
                             <textarea id="note-input" class="zettelkasten" rows="10" cols="50"></textarea>
                         </div>
-                        <div class="checkboxarray">
-                            <div>
-                                <input type="checkbox" id="google-search-checkbox" name="enable-search">
-                                <label for="google-search-checkbox">Search</label>
+                            <div class="checkboxarray">
+                                <div>
+                                    <input type="checkbox" id="google-search-checkbox" name="enable-search">
+                                    <label for="google-search-checkbox">Search</label>
 
-                            </div>
-                            <div>
-                                <input type="checkbox" id="code-checkbox" name="code-checkbox">
-                                <label for="code-checkbox">Code</label>
-                            </div>
-                            <div>
-                                <input type="checkbox" id="auto-mode-checkbox">
-                                <label for="auto-mode-checkbox">Auto</label>
-                            </div>
-                            <div>
-                                <input type="checkbox" id="embed-checkbox">
-                                <label for="embed-checkbox">Data</label>
-                            </div>
-                            <div>
-                                <input type="checkbox" id="enable-wolfram-alpha" name="enable-wolfram-alpha">
-                                <label for="enable-wolfram-alpha">Wolfram</label>
-                            </div>
-                            <div>
-                                <input type="checkbox" id="wiki-checkbox">
-                                <label for="wiki-checkbox">Wiki</label>
+                                </div>
+                                <div>
+                                    <input type="checkbox" id="code-checkbox" name="code-checkbox">
+                                    <label for="code-checkbox">Code</label>
+                                </div>
+                                <div>
+                                    <input type="checkbox" id="auto-mode-checkbox">
+                                    <label for="auto-mode-checkbox">Auto</label>
+                                </div>
+                                <div>
+                                    <input type="checkbox" id="embed-checkbox">
+                                    <label for="embed-checkbox">Data</label>
+                                </div>
+                                <div>
+                                    <input type="checkbox" id="enable-wolfram-alpha" name="enable-wolfram-alpha">
+                                    <label for="enable-wolfram-alpha">Wolfram</label>
+                                </div>
+                                <div>
+                                    <input type="checkbox" id="wiki-checkbox">
+                                    <label for="wiki-checkbox">Wiki</label>
 
 
+                                </div>
                             </div>
                         </div>
                     </div>
-                </div>
 
                 <div id="tab2" class="tabcontent">
                     <!-- Second tab content here -->
@@ -325,7 +325,7 @@
                         <br />
                         <div id="saved-networks-container" class="scrollable-list"></div>
                         <a id="save-button">Save</a>
-                        <input id="save-or-load" type="text" placeholder="save data..." />
+                        <input id="save-or-load" type="text" placeholder="save data..." style="width: 244px;" />
                         <a id="load-button">Load</a>
                         <a id="clear-button">Clear</a>
                         <div id="clear-sure" style="display:none">
@@ -333,16 +333,16 @@
                             <a id="clear-sure-button">yes</a>
                         </div>
                         <br />
-                        <button id="clearLocalStorage" class="key-button">Clear Local Storage</button>
-                        <br />
+                        <div style="text-align: center;">
+                            <button id="clearLocalStorage" class="key-button">Clear Local Storage</button>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
     </div>
     <a id="nodes">
-
-        <!-- add stuff here -->
+ <!-- Copy all text to personal storage -->
 
     </a>
     <!--iframe id="inlineFrameExample"
