fix for new line additions
still not a perfect fix but allows for new lines to be added on all nodes except for the last node if there is not a new line at the end of the zettelkasten codemirror. Also increased the zoom factor when scrolling to titles

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         .cm-Prompt {
             color: #E0B0FF;
             background-color: #464250;
-            border-radius: 5px; /* adjust as needed */
+            border-radius: 5px; 
             padding: 2px;
         }
     </style>
