Prompt reduction + Save fix
Reduced token count for context prompts. Fixed issue with saving larger files to local storage with a download .txt file prompt. Unicode escape swap.

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <title>Neurite</title>
     <link rel="stylesheet" type="text/css" href="styles.css">
+    <meta charset="UTF-8">
     <script src="https://cdn.jsdelivr.net/npm/codemirror@5/lib/codemirror.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/codemirror@5/addon/scroll/simplescrollbars.js"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/codemirror@5/lib/codemirror.css">
@@ -82,8 +83,8 @@
                                 <div style="display: flex; align-items: center;">
                                     <input id="Searchbar" class="Searchbar" placeholder="search notes..." onkeydown="if(event.key === 'Enter') event.preventDefault();" />
                                     <div class="btn-group" style="margin-left: 10px;">
-                                        <button type="submit">⏵</button>
-                                        <button id="regen-button" type="button">↺</button>
+                                        <button type="submit">&#x23F5;</button>
+                                        <button id="regen-button" type="button">&#x21BA;</button>
                                     </div>
                                 </div>
                                 <div class="input-group" style="margin-top: 10px;">
