--- a/index.html
+++ b/index.html
@@ -232,8 +232,8 @@
                 <div id="tab4" class="tabcontent">
                     <!-- Fourth tab content here -->
                     <div class="submenu">
-                        <input type="checkbox" id="local-embeddings-checkbox">
-                        <label for="local-embeddings-checkbox">: Local Embeddings</label>
+                     <!--   <input type="checkbox" id="local-embeddings-checkbox">
+                        <label for="local-embeddings-checkbox">: Local Embeddings</label> -->
                         <div class="api-container">
                             <div class="api-inputs">
                                 <div>
@@ -408,7 +408,7 @@
     <script src="js/dropdown.js"></script>
     <script src="js/zettelkasten.js"></script>
 
-    <script defer type="module" src="./js/embeddings.js"></script>
+    <!--  <script defer type="module" src="./js/embeddings.js"></script> -->
 
     <script src="js/interface.js"></script>
     <script src="js/ai.js"></script>
