--- a/index.html
+++ b/index.html
@@ -232,8 +232,8 @@
                 <div id="tab4" class="tabcontent">
                     <!-- Fourth tab content here -->
                     <div class="submenu">
-                     <!--   <input type="checkbox" id="local-embeddings-checkbox">
-                        <label for="local-embeddings-checkbox">: Local Embeddings</label> -->
+                     <input type="checkbox" id="local-embeddings-checkbox">
+                        <label for="local-embeddings-checkbox">: Local Embeddings</label>
                         <div class="api-container">
                             <div class="api-inputs">
                                 <div>
