--- a/index.html
+++ b/index.html
@@ -408,7 +408,7 @@
     <script src="js/dropdown.js"></script>
     <script src="js/zettelkasten.js"></script>
 
-    <!--  <script defer type="module" src="./js/embeddings.js"></script> -->
+    <script defer type="module" src="./js/embeddings.js"></script> 
 
     <script src="js/interface.js"></script>
     <script src="js/ai.js"></script>
