Switch from Parcel to Vite
Allows for transformers.js CDN link while building webLLM.ts

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <title>Neurite</title>
-    <link rel="stylesheet" type="text/css" href="styles.css">
+    <link rel="stylesheet" type="text/css" href="./styles.css">
     <meta charset="UTF-8">
     <script src="https://cdn.jsdelivr.net/npm/codemirror@5/lib/codemirror.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/codemirror@5/addon/scroll/simplescrollbars.js"></script>
@@ -429,17 +429,17 @@
 
     </div>
     <script type="text/javascript" src="https://cdn.jsdelivr.net/pyodide/v0.23.0/full/pyodide.js"></script>
-    <script src="js/dropdown.js"></script>
-    <script src="js/zettelkasten.js"></script>
+    <script src="/js/dropdown.js"></script>
+    <script src="/js/zettelkasten.js"></script>
 
     <!--<script defer type="module" src="js/embeddings.ts"></script>-->
-    <!-- <script type="module" src="https://cdn.jsdelivr.net/npm/@xenova/transformers@2.3.0"></script>-->
-    <script defer type="module" src="./js/embeddings.js"></script>
+    <!--<script type="module" src="https://cdn.jsdelivr.net/npm/@xenova/transformers@2.3.0"></script>-->
+    <script defer type="module" src="/js/embeddings.js"></script>
 
 
-    <script src="js/interface.js"></script>
-    <script src="js/ai.js"></script>
-    <script type="module" src="webLLM/webllm.ts"></script>
+    <script src="/js/interface.js"></script>
+    <script src="/js/ai.js"></script>
+    <script type="module" src="/webLLM/webllm.ts" defer></script>
     <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
 </body>
 
