--- a/index.html
+++ b/index.html
@@ -266,8 +266,8 @@
                         <button id="downloadAiButton" class="key-button">INSTALL</button>
                         <div class="inline-container">
                             <select id="LocalLLMselect" class="model-dropdown">
-                                <option value="RedPajama-INCITE-Chat-3B-v1-q4f32_0">Red Pajama 3B f32</option>
-                                <option value="vicuna-v1-7b-q4f32_0" selected>Vicuna 7B f32</option>
+                                <option value="RedPajama-INCITE-Chat-3B-v1-q4f32_0" selected>Red Pajama 3B f32</option>
+                                <option value="vicuna-v1-7b-q4f32_0">Vicuna 7B f32</option>
                             </select>
                         </div>
                         <div class="inline-container">
