--- a/index.html
+++ b/index.html
@@ -458,7 +458,7 @@
 
     <!--<script defer type="module" src="js/embeddings.ts"></script>-->
     <!--<script type="module" src="https://cdn.jsdelivr.net/npm/@xenova/transformers@2.3.0"></script>-->
-    <script defer type="module" src="/webLLM/embeddings.js"></script>
+    <script defer type="module" src="/embeddings.js"></script>
 
 
     <script src="js/interface.js"></script>
