--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <title>Neurite</title>
-    <link rel="stylesheet" type="text/css" href="./styles.css">
+    
     <meta charset="UTF-8">
     <script src="https://cdn.jsdelivr.net/npm/codemirror@5/lib/codemirror.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/codemirror@5/addon/scroll/simplescrollbars.js"></script>
@@ -27,6 +27,8 @@
             padding: 2px;
         }
     </style>
+  <script type="module" crossorigin src="./assets/index.7fd8e8e3.js"></script>
+  <link rel="stylesheet" href="./assets/index.cea0318a.css">
 </head>
 
 <body id="body">
@@ -44,12 +46,7 @@
 
 
     <svg id="debug_layer" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100" style="position: absolute; left:0px; top:0px; display:none; visibility:hidden; width: 100%; height: 100vh;">
-        <style type="text/css">
-            .white {
-                font: 12px sans-serif;
-                fill: white;
-            }
-        </style>
+        <style type="text/css"> .white { font: 12px sans-serif; fill: white; } </style>
         <text x="0" y="0" class="white">fps:</text>
     </svg>
 
@@ -458,11 +455,11 @@
 
     <!--<script defer type="module" src="js/embeddings.ts"></script>-->
     <!--<script type="module" src="https://cdn.jsdelivr.net/npm/@xenova/transformers@2.3.0"></script>-->
-    <script defer type="module" src="/embeddings.js"></script>
+    <script defer type="module" src="./embeddings.js"></script>
 
 
     <script src="js/interface.js"></script>
-    <script type="module" src="/webLLM/webllm.ts" defer></script>
+    
     <script src="js/ai.js"></script>
 
     <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
