--- a/index.html
+++ b/index.html
@@ -522,21 +522,20 @@
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/dompurify/2.3.3/purify.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
-
-
     <script type="text/javascript" src="https://cdn.jsdelivr.net/pyodide/v0.23.0/full/pyodide.js"></script>
-    <script src="js/dropdown.js"></script>
-    <script src="js/zettelkasten.js"></script>
 
-    <!--<script defer type="module" src="js/embeddings.ts"></script>-->
-    <!--<script type="module" src="https://cdn.jsdelivr.net/npm/@xenova/transformers@2.3.0"></script>-->
+    <script src="js/dropdown_v1.js"></script>
+    <script src="js/zettelkasten_v1.js"></script>
+
     <script defer type="module" src="/embeddings.js"></script>
 
-    <script src="js/mandelbrot.js"></script>
-    <script src="js/interface.js"></script>
-    <script type="module" src="/webLLM/webllm.ts" defer></script>
-    <script src="js/ai.js"></script>
-    <script src="js/record.js"></script>
+    <script src="js/mandelbrot_v1.js"></script>
+    <script src="js/interface_v1.js"></script>
+
+    <script type="module" src="/webLLM/webllm_v1.ts" defer></script>
+
+    <script src="js/ai_v1.js"></script>
+    <script src="js/record_v1.js"></script>
 
 </body>
 
